Added docker run
