# openapi/rust/src/models/exec_result.rs
@@ -1,0 +1,35 @@
+/*
+ * Robot Farm API
+ *
+ * Base OpenAPI definition for Robot Farm services.
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct ExecResult {
+    #[serde(rename = "command")]
+    pub command: String,
+    #[serde(rename = "exit_code")]
+    pub exit_code: i32,
+    #[serde(rename = "stdout")]
+    pub stdout: String,
+    #[serde(rename = "stderr")]
+    pub stderr: String,
+}
+
+impl ExecResult {
+    pub fn new(command: String, exit_code: i32, stdout: String, stderr: String) -> ExecResult {
+        ExecResult {
+            command,
+            exit_code,
+            stdout,
+            stderr,
+        }
+    }
+}
