# openapi/rust/src/models/mod.rs
@@ -8,6 +8,8 @@ pub mod commit_info;
 pub use self::commit_info::CommitInfo;
 pub mod config;
 pub use self::config::Config;
+pub mod exec_result;
+pub use self::exec_result::ExecResult;
 pub mod feed;
 pub use self::feed::Feed;
 pub mod feed_level;
